# football-analysis-yolo

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  yolo_inference.ipynb  yolo_inference.py
trackers/: tracker.py
training/: football_training_yolo.ipynb
utils/: video_utils.py
